# libraw_enhanced

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  __init__.py  pixi.toml  pyproject.toml  pytest.ini  setup.py  tox.ini
core/: accelerator.cpp  accelerator.h  camera_matrices.cpp  camera_matrices.h  constants.h  cpu_accelerator.cpp  cpu_accelerator.h  gpu_accelerator.h  gpu_accelerator.mm  libraw_wrapper.cpp  libraw_wrapper.h  python_bindings.cpp
core/metal/: apply_white_balance.metal  apply_white_balance_bayer.metal  apply_white_balance_xtrans.metal  axial_ca.metal  bayer_ahd.metal  bayer_amaze.metal  bayer_dcb.metal  bayer_linear.metal  bayer_vng.metal  color_conversion.metal  color_space_matrices.metal  convert_color_space.metal  defringe.metal  demosaic_bayer_amaze.metal  demosaic_bayer_border.metal  demosaic_bayer_linear.metal  demosaic_xtrans_1pass.metal  demosaic_xtrans_3pass.metal  demosaic_xtrans_border.metal  detail_tonemap.metal  enhance_micro_contrast.metal  gamma_correct.metal  gamma_correction.metal  lateral_ca.metal  matrix_transform.metal  metal_common.h  shader_common.h  shader_types.h  tone_mapping.metal  white_balance_raw.metal  xtrans_1pass.metal  xtrans_3pass.metal
docs/: defringe_design.md
icc/: ProPhoto RGB.icc
libraw_enhanced/: __init__.py  _version.py  constants.py  high_level_api.py
tests/: conftest.py  test_defringe.py  test_raw_to_jpg.py
tools/: analyze_defringe_rois.py  convert_defringe_debug_to_png.py
